--- a/src/styles/modules/_layout.scss
+++ b/src/styles/modules/_layout.scss
@@ -11,6 +11,7 @@ body {
   font-size: $font-size-base;
   color: $text-color;
   font-weight: normal;
+  background: $back-color;
 }
 
 h1, h2, h3, h4, h5, h6 {
