--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -4,6 +4,14 @@
 @import "modules/layout";
 @import "modules/utilities";
 
+.app-container {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
 .heading {
   margin: 1em auto;
   padding-bottom: 1em;
@@ -15,100 +23,138 @@
 }
 
 .content {
-  min-height: 70vh;
-}
-
-.option {
-  margin: 1em auto;
-  h5 {
-    margin-bottom: 1em;
-  }
-
-  .radio-group  {
-    label {
-      display: block;
-    }  
-    input[type="radio"] {
-      display: inline-block;
-      margin: 3px 5px;
-    }
-  }
-}
-
-.option-wrap {
+  flex: 1;
   display: flex;
-  flex-wrap: wrap;
-  padding-left: 30px;
+  flex-direction: column;
+}
 
-  .sign-item-link {
-    margin-right: 30px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    overflow: hidden;
-    // border: 1px solid #eee;
-    transition: transform .3s ease;
-    
-    &:hover {
-      transform: translateY(-8px);
-      background: rgba(37, 38, 43, .05);
-
-      .del-wrap {
-        opacity: 1;
-        transition: opacity;
-        transition-delay: .76s;
+.option-container {
+  flex: 1;
+  .option {
+    margin: 1em auto;
+    h5 {
+      margin-bottom: 1em;
+    }
+  
+    .radio-group  {
+      label {
+        display: block;
+      }  
+      input[type="radio"] {
+        display: inline-block;
+        margin: 3px 5px;
       }
     }
   }
   
-  .sign-item {
-    position: relative;
+  .option-wrap {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 140px;
-    height: 140px;
-    padding: 6px;
-    
-    .del-wrap {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      padding: 3px;
-      border-radius: 6px;
-      opacity: 0;
+    flex-wrap: wrap;
+    padding-left: 30px;
+  
+    .sign-item-link {
+      margin-right: 30px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      overflow: hidden;
+      // border: 1px solid #eee;
+      transition: transform .3s ease;
+      
       &:hover {
-        background: #ddd;
-      }
-
-      .del-btn {
-        width: 17px;
-        height: 17px;
-        background-image: url(../icons/del.png);
-        background-size: 100% 100%;
+        // transform: translateY(-8px);
+        background: rgba(37, 38, 43, .05);
+  
+        .del-wrap {
+          opacity: 1;
+          transition: opacity;
+          transition-delay: .76s;
+        }
       }
     }
-    .icon img {
-      display: block;
-      width: 40px;
-      height: 40px;
-      margin: 0 auto;
-    }
-
-    .title {
+    
+    .sign-item {
+      position: relative;
       display: flex;
-      height: 50px;
-      align-items: center;
-      justify-content: center;
-      p {
-        text-overflow: -o-ellipsis-lastline;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        line-clamp: 2;
-        -webkit-box-orient: vertical;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 140px;
+      height: 140px;
+      padding: 6px;
+      overflow: hidden;
+      
+      .del-wrap {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        padding: 3px;
+        border-radius: 6px;
+        opacity: 0;
+        &:hover {
+          background: #ddd;
+        }
+  
+        .del-btn {
+          width: 17px;
+          height: 17px;
+          background-image: url(../icons/del.png);
+          background-size: 100% 100%;
+        }
+      }
+      .icon img {
+        display: block;
+        width: 40px;
+        height: 40px;
+        margin: 0 auto;
+      }
+  
+      .title {
+        display: flex;
+        height: 50px;
+        align-items: center;
+        justify-content: center;
+        p {
+          text-overflow: -o-ellipsis-lastline;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          line-clamp: 2;
+          -webkit-box-orient: vertical;
+        }
+        input {
+          width: 100%;
+          padding: 0 8px;
+          box-sizing: border-box;
+        }
       }
     }
   }
 }
 
+.menu-container {
+  padding: 30px 60px;
+
+  .menu-list {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    // background: #eee;
+
+    .memu-item,
+    .memu-add-item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 80px;
+      height: 80px;
+      padding: 8px;
+      color: #fff;
+      cursor: pointer;
+      margin-right: 20px;
+      border-radius: 50%;
+      // background: #eee;
+      background-color: #0abde3;
+      box-shadow: 1px 3px 5px #eee;
+    }
+  }
+}
