fix: options pages

--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -89,7 +89,7 @@
         border-radius: 6px;
         opacity: 0;
         &:hover {
-          background: #ddd;
+          background: #fff;
         }
   
         .del-btn {
