--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -151,8 +151,7 @@
       color: #fff;
       cursor: pointer;
       margin-right: 20px;
-      border-radius: 50%;
-      // background: #eee;
+      border-radius: 10px;
       background-color: #0abde3;
       box-shadow: 1px 3px 5px #eee;
       transition: transform .2s ease;
