feat: clear html tag style

--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -1,8 +1,10 @@
+@import "modules/main";
 @import "modules/reset";
 @import "modules/variables";
 @import "modules/grid";
 @import "modules/layout";
 @import "modules/utilities";
+@import "modules/dropdown-menu";
 
 .app-container {
   width: 100vw;
