--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -59,6 +59,7 @@
       margin-bottom: 20px;
       border-radius: 10px;
       overflow: hidden;
+      cursor: pointer;
       transition: transform 0.3s ease;
 
       &:hover {
