--- a/src/pages/components/DropdownMenu/index.scss
+++ b/src/pages/components/DropdownMenu/index.scss
@@ -5,7 +5,8 @@
   padding: 4px;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 1px 1px rgba(188, 188, 194, 0.05), 0 8px 24px rgba(188, 188, 194, 12%) !important;
+  box-shadow: 0 0 1px 1px rgba(188, 188, 194, 0.05),
+    0 8px 24px rgba(188, 188, 194, 12%) !important;
 
   .dropdown-menu-divider {
     height: 1px;
@@ -32,5 +33,4 @@
       color: rgb(255, 126, 117);
     }
   }
-
 }
