--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,6 +1,8 @@
-html, body {
+html,
+body {
   box-sizing: border-box;
-  &:before, &:after {
+  &:before,
+  &:after {
     box-sizing: border-box;
   }
 }
@@ -9,12 +11,16 @@ body {
   font-family: $font-family-base;
   line-height: $line-height-base;
   font-size: $font-size-base;
-  color: $text-color;
   font-weight: normal;
-  background: $back-color;
+  color: var(--context-primary);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
   line-height: $headings-line-height;
@@ -22,12 +28,24 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
-h1 { font-size: 1.75em; }
-h2 { font-size: 1.5em; }
-h3 { font-size: 1.25em; }
-h4 { font-size: 1.10em; }
-h5 { font-size: 1em; }
-h6 { font-size: .85em; }
+h1 {
+  font-size: 1.75em;
+}
+h2 {
+  font-size: 1.5em;
+}
+h3 {
+  font-size: 1.25em;
+}
+h4 {
+  font-size: 1.1em;
+}
+h5 {
+  font-size: 1em;
+}
+h6 {
+  font-size: 0.85em;
+}
 
 nav {
   margin: 1em 0;
@@ -40,7 +58,7 @@ nav {
     li {
       display: inline-block;
       margin-right: 1em;
-      margin-bottom: .25em;
+      margin-bottom: 0.25em;
     }
   }
 }
@@ -48,12 +66,14 @@ nav {
 a {
   text-decoration: none;
   color: $brand-primary;
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     color: darken($brand-primary, 6.25%);
   }
 }
 
-ul, ol {
+ul,
+ol {
   margin-top: 0;
   padding-top: 0;
   padding-left: 2.5em;
@@ -75,8 +95,9 @@ p {
     margin-bottom: 0;
   }
 
-  + ul, + ol {
-    margin-top: -.75em;
+  + ul,
+  + ol {
+    margin-top: -0.75em;
   }
 }
 
