--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -110,8 +110,8 @@
       }
       .icon img {
         display: block;
-        width: 40px;
-        height: 40px;
+        width: 35px;
+        height: 35px;
         margin: 0 auto;
       }
 
@@ -119,7 +119,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
         p {
+          padding-left: 3px;
           font-size: 14px;
           overflow: hidden;
           text-overflow: ellipsis;
@@ -130,6 +132,8 @@
         }
         input {
           width: 100%;
+          height: 30px;
+          border-radius: 5px;
           padding: 0 8px;
           font-size: 14px;
           box-sizing: border-box;
