--- a/src/pages/components/Modal/index.scss
+++ b/src/pages/components/Modal/index.scss
@@ -95,16 +95,18 @@
       min-width: 0;
       box-sizing: border-box;
       margin: 0;
+      letter-spacing: 0.5px;
       transition: background-color 0.3s ease;
       padding: 8px 12px;
       border-radius: 5px;
       background-color: rgba(132, 133, 141, 0.12);
       color: rgb(37, 38, 43);
 
-      &:hover {
+      &:hover,
+      &:focus {
         border: none;
         background-color: rgba(132, 133, 141, 0.24);
-        box-shadow: 0 0 0 1px rgba(112, 136, 255, 0.24);
+        box-shadow: 0 0 0 1px rgba(112, 136, 255);
         border-right-width: 1px !important;
       }
     }
@@ -153,6 +155,10 @@
           color: #fff;
           background-color: rgb(138, 157, 255);
         }
+
+        &-disabled {
+          cursor: not-allowed;
+        }
       }
     }
   }
@@ -166,6 +172,21 @@
     .modal-title,
     .modal-body .input-borderless {
       color: #fff;
+    }
+
+    .modal-footer {
+      .footer {
+        .button {
+          &-disabled {
+            color: rgba(301, 255, 255, 0.18);
+            background: rgb(132, 133, 141, 0.36);
+            &:hover {
+              color: rgba(301, 255, 255, 0.18);
+              background: rgb(132, 133, 141, 0.36);
+            }
+          }
+        }
+      }
     }
   }
 }
