--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -2,12 +2,14 @@
   color-scheme: light dark;
   --context: 37, 38, 43;
   --context-primary: rgb(var(--context));
+  --background_primary: rgb(255, 255, 255);
   --sign-card-back-color: rgba(37, 38, 43, 0.05);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --context: 255, 255, 255;
+    --background_primary: rgb(17, 17, 19);
     --context-primary: rgb(var(--context));
     --sign-card-back-color: rgba(37, 38, 43, 0.5);
   }
