--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -13,6 +13,7 @@ body {
   font-size: $font-size-base;
   font-weight: normal;
   color: var(--context-primary);
+  background-color: var(--background_primary);
 }
 
 h1,
