feat: perfect theme

--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -19,6 +19,10 @@
   padding-bottom: 1em;
   border-bottom: 1px solid #eee;
 
+  h1 {
+    color: var(--context_primary);
+  }
+
   h1 + .lead {
     margin-top: 0.2em;
   }
@@ -41,7 +45,7 @@
     .option-title {
       padding: 0 20px;
       font-size: 18px;
-      color: var(--context-primary);
+      color: var(--context_primary);
     }
 
     .radio-group {
@@ -70,7 +74,7 @@
 
       &:hover {
         transform: translateY(-8px);
-        background: var(--sign-card-back-color);
+        background: var(--sign_card_back_color);
 
         .del-wrap {
           opacity: 1;
@@ -210,6 +214,67 @@
       &:active {
         transform: scale(0.7);
       }
+    }
+  }
+}
+
+.ant-modal-wrap {
+  .ant-modal-header {
+    border-radius: 10px 10px 0 0;
+    border-bottom: none;
+    padding: 0 20px;
+    height: 64px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    background-color: var(--background_tertiary);
+    .ant-modal-title {
+      line-height: 24px;
+      color: var(--context_primary);
+      max-width: 100%;
+    }
+  }
+
+  .ant-modal-content {
+    border-radius: 10px;
+    background-color: var(--background_tertiary);
+
+    path {
+      fill: var(--context_secondary);
+    }
+  }
+
+  .ant-modal-body {
+    padding: 0 20px;
+  }
+
+  .ant-input {
+    padding: 8px 12px;
+    border-radius: 5px;
+    background-color: var(--divider_tertiary);
+    color: var(--context_primary);
+    transition: background-color 0.3s ease;
+    border: none;
+    box-shadow: none;
+
+    &:hover,
+    &:focus {
+      border: none;
+      background-color: var(--divider_secondary);
+      box-shadow: 0 0 0 1px var(--theme_primary);
+    }
+  }
+
+  .ant-modal-footer {
+    border-top: none;
+    border-radius: 0 0 10px 10px;
+    padding: 20px;
+    overflow: hidden;
+
+    .modal-footer {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
     }
   }
 }
