--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,16 +1,170 @@
 :root {
   color-scheme: light dark;
-  --context: 37, 38, 43;
-  --context-primary: rgb(var(--context));
+  --sign_card_back_color: rgba(37, 38, 43, 0.05);
+
+  --basic_white: rgb(255, 255, 255);
+  --basic_white_secondary: rgba(255, 255, 255, 0.72);
+  --basic_white_tertiary: rgba(255, 255, 255, 0.36);
+  --basic_white_quarternary: rgba(255, 255, 255, 0.18);
+  --basic_black: rgb(0, 0, 0);
+  --basic_elevated: rgb(49, 49, 54);
+  --basic_elevated_blur: rgba(49, 49, 54, 0.76);
   --background_primary: rgb(255, 255, 255);
-  --sign-card-back-color: rgba(37, 38, 43, 0.05);
+  --background_primary_blur: var(--background_primary);
+  --background_secondary: rgb(245, 245, 246);
+  --background_secondary_blur: var(--background_secondary);
+  --background_tertiary: rgb(255, 255, 255);
+  --background_tertiary_blur: var(--background_tertiary);
+  --dark_elevated_primary: rgb(255, 255, 255);
+  --dark_elevated_secondary: rgb(245, 245, 246);
+  --dark_elevated_tertiary: rgb(255, 255, 255);
+  --group_primary: rgb(245, 245, 246);
+  --group_secondary: rgb(255, 255, 255);
+  --group_tertiary: rgb(245, 245, 246);
+  --context: 37, 38, 43;
+  --context_primary: rgb(var(--context));
+  --context_secondary: rgba(var(--context), 0.72);
+  --context_tertiary: rgba(var(--context), 0.36);
+  --context_quarternary: rgba(var(--context), 0.18);
+  --divider: 132, 133, 141;
+  --divider_primary: rgba(var(--divider), 0.2);
+  --divider_secondary: rgba(var(--divider), 0.16);
+  --divider_tertiary: rgba(var(--divider), 0.08);
+  --divider_overlay: rgba(0, 0, 0, 0.24);
+  --divider_tap: rgba(0, 0, 0, 0.08);
+  --theme: 99, 125, 255;
+  --theme_primary: rgb(var(--theme));
+  --theme_secondary: rgba(var(--theme), 0.48);
+  --theme_tertiary: rgba(var(--theme), 0.24);
+  --theme_quarternary: rgba(var(--theme), 0.12);
+  --theme_hover: rgb(122, 144, 255);
+  --theme_active: rgb(82, 110, 250);
+  --red: 243, 91, 81;
+  --red_primary: rgb(var(--red));
+  --red_secondary: rgba(var(--red), 0.48);
+  --red_tertiary: rgba(var(--red), 0.24);
+  --red_quarternary: rgba(var(--red), 0.12);
+  --red_hover: rgb(255, 111, 102);
+  --red_active: rgb(237, 80, 69);
+  --orange: 255, 163, 26;
+  --orange_primary: rgb(var(--orange));
+  --orange_secondary: rgba(var(--orange), 0.48);
+  --orange_tertiary: rgba(var(--orange), 0.24);
+  --orange_quarternary: rgba(var(--orange), 0.12);
+  --yellow: 254, 208, 38;
+  --yellow_primary: rgb(var(--yellow));
+  --yellow_secondary: rgba(var(--yellow), 0.48);
+  --yellow_tertiary: rgba(var(--yellow), 0.24);
+  --yellow_quarternary: rgba(var(--yellow), 0.12);
+  --green: 19, 203, 54;
+  --green_primary: rgb(var(--green));
+  --green_secondary: rgba(var(--green), 0.48);
+  --green_tertiary: rgba(var(--green), 0.24);
+  --green_quarternary: rgba(var(--green), 0.12);
+  --seagreen: 9, 153, 112;
+  --seagreen_primary: rgb(var(--seagreen));
+  --seagreen_secondary: rgba(var(--seagreen), 0.48);
+  --seagreen_tertiary: rgba(var(--seagreen), 0.24);
+  --seagreen_quarternary: rgba(var(--seagreen), 0.12);
+  --teal: 31, 203, 247;
+  --teal_primary: rgb(var(--teal));
+  --teal_secondary: rgba(var(--teal), 0.48);
+  --teal_tertiary: rgba(var(--teal), 0.24);
+  --teal_quarternary: rgba(var(--teal), 0.12);
+  --blue: 38, 125, 255;
+  --blue_primary: rgb(var(--blue));
+  --blue_secondary: rgba(var(--blue), 0.48);
+  --blue_tertiary: rgba(var(--blue), 0.24);
+  --blue_quarternary: rgba(var(--blue), 0.12);
+  --indigo: 140, 90, 248;
+  --indigo_primary: rgb(var(--indigo));
+  --indigo_secondary: rgba(var(--indigo), 0.48);
+  --indigo_tertiary: rgba(var(--indigo), 0.24);
+  --indigo_quarternary: rgba(var(--indigo), 0.12);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --context: 255, 255, 255;
+    --sign_card_back_color: rgba(37, 38, 43, 0.5);
+
+    --basic_white: rgb(255, 255, 255);
+    --basic_white_secondary: rgba(255, 255, 255, 0.72);
+    --basic_white_tertiary: rgba(255, 255, 255, 0.36);
+    --basic_white_quarternary: rgba(255, 255, 255, 0.18);
+    --basic_black: rgb(0, 0, 0);
+    --basic_elevated: rgb(49, 49, 54);
+    --basic_elevated_blur: rgba(49, 49, 54, 0.76);
     --background_primary: rgb(17, 17, 19);
-    --context-primary: rgb(var(--context));
-    --sign-card-back-color: rgba(37, 38, 43, 0.5);
+    --background_primary_blur: var(--background_primary);
+    --background_secondary: rgb(34, 34, 38);
+    --background_secondary_blur: var(--background_secondary);
+    --background_tertiary: rgb(49, 49, 54);
+    --background_tertiary_blur: var(--background_tertiary);
+    --dark_elevated_primary: rgb(34, 34, 38);
+    --dark_elevated_secondary: rgb(49, 49, 54);
+    --dark_elevated_tertiary: rgb(63, 63, 69);
+    --group_primary: rgb(17, 17, 19);
+    --group_secondary: rgb(34, 34, 38);
+    --group_tertiary: rgb(49, 49, 54);
+    --context: 301, 255, 255;
+    --context_primary: rgb(var(--context));
+    --context_secondary: rgba(var(--context), 0.72);
+    --context_tertiary: rgba(var(--context), 0.36);
+    --context_quarternary: rgba(var(--context), 0.18);
+    --divider: 132, 133, 141;
+    --divider_primary: rgba(var(--divider), 0.36);
+    --divider_secondary: rgba(var(--divider), 0.24);
+    --divider_tertiary: rgba(var(--divider), 0.12);
+    --divider_overlay: rgba(136, 136, 136, 0.24);
+    --divider_tap: rgba(255, 255, 255, 0.08);
+    --theme: 112, 136, 255;
+    --theme_primary: rgb(var(--theme));
+    --theme_secondary: rgba(var(--theme), 0.48);
+    --theme_tertiary: rgba(var(--theme), 0.24);
+    --theme_quarternary: rgba(var(--theme), 0.12);
+    --theme_hover: rgb(138, 157, 255);
+    --theme_active: rgb(97, 122, 250);
+    --red: 239, 103, 94;
+    --red_primary: rgb(var(--red));
+    --red_secondary: rgba(var(--red), 0.48);
+    --red_tertiary: rgba(var(--red), 0.24);
+    --red_quarternary: rgba(var(--red), 0.12);
+    --red_hover: rgb(255, 126, 117);
+    --red_active: rgb(234, 92, 83);
+    --orange: 254, 176, 59;
+    --orange_primary: rgb(var(--orange));
+    --orange_secondary: rgba(var(--orange), 0.48);
+    --orange_tertiary: rgba(var(--orange), 0.24);
+    --orange_quarternary: rgba(var(--orange), 0.12);
+    --yellow: 248, 214, 45;
+    --yellow_primary: rgb(var(--yellow));
+    --yellow_secondary: rgba(var(--yellow), 0.48);
+    --yellow_tertiary: rgba(var(--yellow), 0.24);
+    --yellow_quarternary: rgba(var(--yellow), 0.12);
+    --green: 39, 205, 71;
+    --green_primary: rgb(var(--green));
+    --green_secondary: rgba(var(--green), 0.48);
+    --green_tertiary: rgba(var(--green), 0.24);
+    --green_quarternary: rgba(var(--green), 0.12);
+    --seagreen: 22, 157, 118;
+    --seagreen_primary: rgb(var(--seagreen));
+    --seagreen_secondary: rgba(var(--seagreen), 0.48);
+    --seagreen_tertiary: rgba(var(--seagreen), 0.24);
+    --seagreen_quarternary: rgba(var(--seagreen), 0.12);
+    --teal: 49, 209, 245;
+    --teal_primary: rgb(var(--teal));
+    --teal_secondary: rgba(var(--teal), 0.48);
+    --teal_tertiary: rgba(var(--teal), 0.24);
+    --teal_quarternary: rgba(var(--teal), 0.12);
+    --blue: 31, 145, 246;
+    --blue_primary: rgb(var(--blue));
+    --blue_secondary: rgba(var(--blue), 0.48);
+    --blue_tertiary: rgba(var(--blue), 0.24);
+    --blue_quarternary: rgba(var(--blue), 0.12);
+    --indigo: 147, 101, 245;
+    --indigo_primary: rgb(var(--indigo));
+    --indigo_secondary: rgba(var(--indigo), 0.48);
+    --indigo_tertiary: rgba(var(--indigo), 0.24);
+    --indigo_quarternary: rgba(var(--indigo), 0.12);
   }
 }
