--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -12,7 +12,7 @@ body {
   line-height: $line-height-base;
   font-size: $font-size-base;
   font-weight: normal;
-  color: var(--context-primary);
+  color: var(--context_primary);
   background-color: var(--background_primary);
 }
 
