--- a/src/components/DropdownMenu/index.scss
+++ b/src/components/DropdownMenu/index.scss
@@ -7,6 +7,10 @@
   box-shadow: 0 0 1px 1px rgba(188, 188, 194, 0.05),
     0 8px 24px rgba(188, 188, 194, 12%);
 
+  .dropdown-menu-root {
+    margin: 0;
+  }
+
   .dropdown-menu-divider {
     height: 1px;
     margin: 4px 8px;
