--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -37,7 +37,10 @@
   flex: 1;
 
   .option-title-container {
+    display: flex;
+    // align-items: center;
     width: 100%;
+    height: 40px;
     margin: 0 auto;
 
     h5 {
@@ -45,9 +48,11 @@
     }
 
     .option-title {
-      padding: 0 20px;
       font-size: 18px;
       color: var(--context_primary);
+    }
+    .option-title-input {
+      font-size: 16px;
     }
 
     .radio-group {
@@ -60,8 +65,12 @@
       }
     }
   }
-  .edit-icon {
+
+  .option-title-icon {
     color: var(--context_primary);
+  }
+  .edit-icon {
+    font-size: 16px;
   }
 
   .option-wrap {
