--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -41,7 +41,7 @@
     // align-items: center;
     width: 100%;
     height: 40px;
-    margin: 0 auto;
+    max-width: 50%;
 
     h5 {
       margin-bottom: 1em;
@@ -50,6 +50,9 @@
     .option-title {
       font-size: 18px;
       color: var(--context_primary);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .option-title-input {
       font-size: 16px;
