--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -7,7 +7,6 @@
 @import '../../styles/color.scss';
 
 .app-container {
-  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -38,7 +37,7 @@
 
   .option-title-container {
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
     width: 100%;
     height: 40px;
     max-width: 50%;
@@ -67,14 +66,19 @@
       font-size: 16px;
     }
     .del-wrap {
-      padding: 3px;
+      width: 28px;
+      height: 28px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      // padding: 3px;
       border-radius: 6px;
       margin-left: 10px;
       visibility: hidden;
       opacity: 0;
 
       &:hover {
-        background: var(--context_primary);
+        background: var(--background_primary);
 
         .del-btn {
           color: var(--red_hover);
@@ -147,13 +151,18 @@
         position: absolute;
         top: 5px;
         right: 5px;
-        padding: 3px;
+        // padding: 3px;
         border-radius: 6px;
         opacity: 0;
         visibility: hidden;
+        width: 28px;
+        height: 28px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         &:hover {
-          background: var(--context_primary);
+          background: var(--background_primary);
 
           .del-btn {
             color: var(--red_hover);
