--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -1,93 +1,67 @@
-@import '../../styles/reset';
-@import '../../styles/variables';
-@import '../../styles/layout';
-
-body,
-html {
-  padding: 0;
-  margin: 0;
+.popup-container {
+  min-width: 200px;
+  max-width: 400px;
+  padding: 10px;
 }
 
-#app {
-  padding: 20px 20px;
-  background: $white;
+.header {
+  display: flex;
+  font-size: 18px;
+  font-weight: 600;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+  .setting-icon {
+    cursor: pointer;
+  }
 }
 
-footer {
-  color: $text-secondary;
-  text-align: right;
-  font-size: 0.8em;
-  a {
-    outline: none;
-    color: lighten($text-secondary, 10%);
-    &:hover {
-      color: $text-secondary;
+.content-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+
+  .logo-wrap {
+    width: 35px;
+    height: 35px;
+    flex-shrink: 0;
+    margin-right: 10px;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
     }
   }
-}
 
-.popup-content {
-  min-width: 220px;
-  min-height: 100px;
-  max-width: 350px;
-}
-
-.app-name {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: $text-secondary;
-  text-align: center;
-  margin: 0 auto 1em auto;
-  padding: 0;
-}
-
-.site-description {
-  padding: 0.5em;
-  border: 1px solid $gray;
-  margin: 0;
-
-  h3 {
-    margin: 0;
-    padding: 0;
-    border-bottom: 1px solid $gray;
-    padding-bottom: 0.5em;
+  .center-content {
+    flex: 1;
+    margin-right: 10px;
+    white-space: nowrap;
   }
 
-  .description {
-    color: $text-secondary;
-    max-height: 100px;
-    font-size: 0.8em;
-    line-height: 1.2;
+  .title {
+    margin-bottom: 5px;
+    font-size: 14px;
+    max-width: 270px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .url {
-    outline: none;
-    text-decoration: none;
-    line-height: 1.2;
-    font-size: 0.8em;
-    word-break: break-word;
-    display: block;
+    max-width: 270px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .btn-wrap {
+    flex-shrink: 0;
   }
 }
 
-.action-container {
-  margin: 1em auto;
-}
-
-.btn {
-  background: none;
-  border: none;
-  display: inline-block;
-  cursor: pointer;
-  padding: 0.5em 1.5em;
-  background: $brand-primary;
-  color: $white;
-  font-weight: $headings-font-weight;
-  border-radius: 2px;
-  outline: none;
-  font-size: 1em;
-}
-
-.option-btn {
-  cursor: pointer;
+.tips {
+  font-size: 14px;
+  white-space: nowrap;
 }
