--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -1,6 +1,5 @@
 .popup-container {
   min-width: 200px;
-  max-width: 400px;
   padding: 10px;
 }
 
@@ -57,7 +56,10 @@
   }
 
   .btn-wrap {
+    display: flex;
     flex-shrink: 0;
+    min-width: 60px;
+    justify-content: flex-end;
   }
 }
 
