feat: popup.html del btn

--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -114,6 +114,10 @@
     margin-bottom: 10px;
   }
 
+  .hide {
+    display: none;
+  }
+
   .tips {
     font-size: 15px;
     white-space: nowrap;
