--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: column;
   filter: opacity(80%);
+  overflow: auto;
   background-size: cover;
   background-repeat: no-repeat;
   // background-image: url(../../assets/img/back.png);
@@ -130,6 +131,7 @@
   }
 
   .option-title-icon {
+    display: none;
     color: var(--context_primary);
   }
   .edit-icon {
@@ -332,5 +334,11 @@ body {
     > .ant-collapse-item
     > .ant-collapse-header {
     padding: 12px 26px 12px 26px;
+  }
+
+  .ant-collapse-item {
+    &:hover .option-title-icon {
+      display: block;
+    }
   }
 }
