--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -6,14 +6,9 @@
 @import '../../styles/utilities';
 @import '../../styles/color.scss';
 
-#app {
-  width: 100%;
-  height: 100%;
-}
-
 .app-container {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   filter: opacity(80%);
