--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -11,10 +11,10 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  filter: opacity(80%);
-  overflow: auto;
-  background-size: cover;
-  background-repeat: no-repeat;
+  // filter: opacity(80%);
+  // overflow: auto;
+  // background-size: cover;
+  // background-repeat: no-repeat;
   // background-image: url(../../assets/img/back.png);
   // background-image: url(https://magazine.artstation.com/wp-content/uploads/2022/02/download-6.jpg);
 }
