--- a/src/components/CommandPalette/index.scss
+++ b/src/components/CommandPalette/index.scss
@@ -1,4 +1,3 @@
-// 448 512 640
 .command-palette-root {
   .search-icon {
     font-size: 20px;
@@ -104,6 +103,12 @@
 
       &:hover {
         background-color: var(--divider_tertiary);
+      }
+
+      .result-content {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
   }
