--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,18 +1,21 @@
 // Colors
-$black:                               #111111;
-$white:                               #ffffff;
-$gray:                                #eeeeee;
-$brand-primary:                       #4990E2;
-$text-color:                          $black;
-$text-secondary:                      #7A7A7A;
-
+$black: #111111;
+$white: #ffffff;
+$gray: #eeeeee;
+$brand-primary: #4990e2;
+$text-color: $black;
+$text-secondary: #7a7a7a;
 
 // Typography
-$font-family-base:                    "Helvetica Neue", Helvetica, Arial, sans-serif;
-$headings-font-family:                "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-size-base:                      16px;
-$line-height-base:                    1.5;
-$headings-font-weight:                500;
-$headings-line-height:                1.1;
-$headings-color:                      $text-color;
-$back-color:                          #ffffff;
+$font-family-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+$headings-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+$font-size-base: 16px;
+$line-height-base: 1.5;
+$headings-font-weight: 500;
+$headings-line-height: 1.1;
+$headings-color: $text-color;
+$back-color: #ffffff;
