--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
+  padding-right: 10px;
 
   .left {
     display: flex;
@@ -42,7 +43,7 @@
 
   .content {
     flex: 1;
-    max-width: 240px;
+    width: 240px;
     margin-right: 10px;
   }
 
@@ -50,7 +51,7 @@
   .folder-list-wrap {
     height: $folderLineHeight;
     max-height: 200px;
-    overflow: hidden;
+    // overflow: hidden;
     margin-top: 10px;
   }
 
@@ -71,6 +72,8 @@
   .folder-select-list-wrap {
     max-height: 200px;
     overflow-y: auto;
+    box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%),
+      0 9px 28px 8px rgb(0 0 0 / 5%);
   }
 
   .folder-select-list-item {
@@ -84,6 +87,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: 240px;
+    user-select: none;
     &:hover {
       background: var(--divider_tertiary);
     }
