--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -1,4 +1,5 @@
 @import '../../styles/color.scss';
+
 .popup-container {
   min-width: 300px;
   padding: 10px;
@@ -72,8 +73,10 @@
   .folder-select-list-wrap {
     max-height: 200px;
     overflow-y: auto;
-    box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%),
-      0 9px 28px 8px rgb(0 0 0 / 5%);
+    border: 1px solid var(--background_secondary);
+    box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%);
+    // box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%),
+    //   0 9px 28px 8px rgb(0 0 0 / 5%);
   }
 
   .folder-select-list-item {
