--- a/src/pages/Newtab/index.scss
+++ b/src/pages/Newtab/index.scss
@@ -52,10 +52,18 @@
   .option-title-container {
     position: relative;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     height: 40px;
-    max-width: 50%;
+    // max-width: 50%;
+    margin-right: 10px;
+    border-radius: 5px;
+    padding-left: 10px;
+    transition: box-shadow 0.6s ease;
+
+    &.checking {
+      box-shadow: 0 0 0 2px var(--theme_primary);
+    }
 
     &:hover {
       .del-wrap {
@@ -78,6 +86,7 @@
       text-overflow: ellipsis;
     }
     .option-title-input {
+      width: 50%;
       font-size: 16px;
     }
     .del-wrap {
@@ -123,6 +132,11 @@
     &:not(:last-child) {
       margin-bottom: 20px;
     }
+
+    .ant-collapse-header {
+      display: flex;
+      align-items: center;
+    }
   }
 
   .option-title-icon {
@@ -144,7 +158,7 @@
       border-radius: 10px;
       overflow: hidden;
       cursor: pointer;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.6s ease;
 
       &:hover {
         transform: translateY(-8px);
@@ -156,6 +170,10 @@
           visibility: visible;
           transition-delay: 0.36s;
         }
+      }
+
+      &.checking {
+        box-shadow: 0 0 0 2px var(--theme_primary);
       }
     }
 
