--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -35,6 +35,21 @@
     width: 100%;
     height: 100%;
   }
+
+  .logo-icon {
+    width: 100%;
+    height: 100%;
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+
+    &.success {
+      background-image: url(../../assets/img/completed.png);
+    }
+    &.error {
+      background-image: url(../../assets/img/error.png);
+    }
+  }
 }
 
 .content-wrap {
